ajout duree rdv par defaut model admin parametre et stimulus pour meetings

--- a/app/views/admin_parameters/_admin_parameter.html.erb
+++ b/app/views/admin_parameters/_admin_parameter.html.erb
@@ -15,6 +15,11 @@
       <%= admin_parameter.coef_longue_duree %>
     </p>
     
+    <p>
+      <strong>durée rdv par défaut:</strong>
+      <%= admin_parameter.duree_rdv %>
+    </p>
+    
 
     <%= links_record(admin_parameter) %>  
 
