--- a/app/views/meetings/_form.html.erb
+++ b/app/views/meetings/_form.html.erb
@@ -17,15 +17,27 @@
         [:nom, :text_field]) 
     %>
   
-    <div class="input-group mb-1">
-      <%= form.label :datedebut, class: "input-group-text label-with-format" %>
-      <%= form.datetime_field :datedebut, class: "form-control m-1 p-1" %>
-    </div>
+      <div data-controller="date-fields">
 
-    <div class="input-group mb-1">
-      <%= form.label :datefin, class: "input-group-text label-with-format" %>
-      <%= form.datetime_field :datefin, class: "form-control m-1 p-1" %>
-    </div>
+        <%= form.hidden_field :duree_rdv, value: AdminParameter.first&.duree_rdv,  
+            data: { date_fields_target: "dureerdv" } %>
+
+
+        <div class="input-group mb-1">
+          <%= form.label :datedebut, class: "input-group-text label-with-format" %>
+          <%= form.datetime_field :datedebut, class: "form-control m-1 p-1",
+                data: { action: "change->date-fields#updateDateFin", date_fields_target: "datedebut" } %>
+        </div>
+
+
+        <div class="input-group mb-1">
+          <%= form.label :datefin, class: "input-group-text label-with-format" %>
+          <%= form.datetime_field :datefin, class: "form-control m-1 p-1",
+            data: {  date_fields_target: "datefin" } %>
+        </div>
+
+      </div>
+
 
     <% unless @client %>
 
@@ -42,8 +54,11 @@
     <% unless @commande %>
 
       <div class="input-group mb-1">
-        <%= form.label :client_id, class: "input-group-text" %>
-        <%= form.select :client_id, 
+
+      <%= form.hidden_field :client_id, value: @client&.id %>
+
+        <%#= form.label :client_id, class: "input-group-text" %>
+        <%#= form.select :client_id, 
           options_for_select(Client.all.order(:nom).pluck(:nom, :id), selected: @client&.id),
           { include_blank: 'Select' },
           { class: "form-select", disabled: @client.present? } %>
