--- a/app/views/commandes/_form.html.erb
+++ b/app/views/commandes/_form.html.erb
@@ -48,10 +48,10 @@
       </div>
       
       <%= custom_form_elements(form, 
-        [:montant, :text_field], [:description, :text_area], 
+        [:description, :text_area], 
         [:debutloc, :date_field], [:finloc, :date_field], [:dateevent, :date_field],
         [:statutarticles, :text_field], 
-        [:commentaires, :text_area], [:commentaires_doc, :text_area], [:devis, :check_box]
+        [:commentaires, :text_area], [:devis, :check_box]
       ) %>
 
 
