correction prix achat vers prix vente

--- a/app/views/admin_parameters/_admin_parameter.html.erb
+++ b/app/views/admin_parameters/_admin_parameter.html.erb
@@ -6,8 +6,8 @@
     </p>
 
     <p>
-      <strong>coef_prix_achat_location:</strong>
-      <%= admin_parameter.coef_prix_achat_location %>
+      <strong>coef_prix_achat_vente:</strong>
+      <%= admin_parameter.coef_prix_achat_vente %>
     </p>
 
      <p>
