correction form tx tva

--- a/app/views/admin_parameters/_form.html.erb
+++ b/app/views/admin_parameters/_form.html.erb
@@ -14,7 +14,7 @@
     <% end %>
 
     <%= custom_form_elements(form, 
-      [:tx_tva, :decimal_field], [:coef_longue_duree, :number_field],
+      [:tx_tva, :number_field], [:coef_longue_duree, :number_field],
       [:duree_rdv, :number_field]
     ) %>
 
