date du jour par defaut si pas de date commande

--- a/app/views/type_produits/_type_produit.html.erb
+++ b/app/views/type_produits/_type_produit.html.erb
@@ -4,7 +4,7 @@
 
     <%= type_produit.nom %>
 
-    <div class="container text-end">
+    <div class="container-fluid p-0 text-end">
       <%= links_record(type_produit) %>  
     </div>
 
