--- a/app/views/admin_parameters/_form.html.erb
+++ b/app/views/admin_parameters/_form.html.erb
@@ -14,9 +14,13 @@
     <% end %>
 
     <%= custom_form_elements(form, 
-      [:tx_tva, :number_field], [:coef_longue_duree, :number_field],
-      [:duree_rdv, :number_field]
+      [:tx_tva, :number_field],  [:duree_rdv, :number_field]
     ) %>
+
+    <div class="input-group input-group mx-1 px-2">
+      <%= form.label :coef_longue_duree, "majoration longue duree", class: "input-group-text" %>
+      <%= form.number_field :coef_longue_duree, class: "form-control", step: "any" %>
+    </div>
 
     <div class="input-group input-group mx-1 px-2">
       <%= form.label :coef_prix_achat_vente, "coef prix achat", class: "input-group-text" %>
