remise edition commande

--- a/app/views/doc_editions/_synthese.html.erb
+++ b/app/views/doc_editions/_synthese.html.erb
@@ -7,7 +7,7 @@
   <% end %>
 
   <%= button_to 'Envoyer mail', send_email_path(doc_edition: @doc_edition), 
-        method: :post, class: 'btn w-100 btn-outline-primary' %>
+        method: :post, class: 'btn w-100 m-1 btn-outline-primary fw-bold' %>
 
   <% end %>
 
