--- a/app/views/commandes/_commande.html.erb
+++ b/app/views/commandes/_commande.html.erb
@@ -14,16 +14,18 @@
 
           <%= custom_badge("", "", "secondary", commande.profile&.nom) %>
 
-          <span class="mx-1">
-            <%= render partial: 'commandes/toggles_statut', locals: { commande: commande } %>
-          </span>
-
-        <% end %>
-
         <%= link_to "", "#collapseCommande#{dom_id(commande)}", 
           class: "btn btn-sm btn-primary fa fa-eye m-1", "data-bs-toggle": "collapse", 
           role: "button", "aria-expanded": "false", "aria-controls": "collapseCommande#{dom_id(commande)}" %>
   
+
+          <div class="m-1">
+            <%= render partial: 'commandes/toggles_statut', locals: { commande: commande } %>
+          </div>
+
+        <% end %>
+
+
       </div>
       <div class="col-2 text-end">
         <%= links_record(commande) %>  
