--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -4,105 +4,114 @@
 
         <%= bandeau_entete("Comptes", "users", "", "") %>
 
-        <div class="mx-2">
-            <h5> Liste des utilisateurs | nb: <%= @users.count %></h5>
+        <div class="card mx-2 my-3 p-3 light-beige-colored shadow-sm">
+            <div class="mx-2">
+                <h5 class="fw-bold"> Liste des utilisateurs 
+                    <span class="mx-1 badge bg-warning"> <%= @users.count %> </span>
+                </h5>
 
-            <div class="table-responsive">
-            <table  class="table table-striped table-bordered table-hover">  
-                <thead class="table-dark text-center">
-                <tr>
-                    <th> # </th>
-                    <th> email </th>
-                    <th> changer role </th>
-                </tr>
-                </thead>
-                <tbody>
-                <% @users.each do |user| %>
+                <div class="table-responsive">
+                <table  class="table table-striped table-bordered table-hover">  
+                    <thead class="table-secondary text-center">
                     <tr>
-                    <td> <%= user.id %>    </td>
-                    <td> <%= user.email %> </td>   
-                    <td> 
-                        <%= link_to "Vendeur", toggle_status_vendeur_user_path(user), class:"btn btn-sm btn-primary", 
-                            :onclick => "return confirm('Etes-vous certain de vouloir passer cet utilisateur en Vendeur ?')" %> 
-                        <%= link_to "Admin", toggle_status_admin_user_path(user), class:"btn btn-sm btn-dark", 
-                            :onclick => "return confirm('Etes-vous certain de vouloir passer cet utilisateur en Admin ?')" %> 
-                    </td>
-
+                        <th> # </th>
+                        <th> email </th>
+                        <th> changer role </th>
                     </tr>
-                <% end %>
-                </tbody>
-            </table>
+                    </thead>
+                    <tbody>
+                    <% @users.each do |user| %>
+                        <tr>
+                            <td class="col-1 text-center"> <%= user.id %> </td>
+                            <td class="col-7"> <%= user.email %> </td>   
+                            <td class="col-5 text-center"> 
+                                <%= link_to "Vendeur", toggle_status_vendeur_user_path(user), class:"btn btn-sm btn-primary", 
+                                :onclick => "return confirm('Etes-vous certain de vouloir passer cet utilisateur en Vendeur ?')" %> 
+                                <%= link_to "Admin", toggle_status_admin_user_path(user), class:"btn btn-sm btn-dark", 
+                                :onclick => "return confirm('Etes-vous certain de vouloir passer cet utilisateur en Admin ?')" %> 
+                            </td>
+
+                        </tr>
+                    <% end %>
+                    </tbody>
+                </table>
+                </div>
             </div>
         </div>
 
-        <hr/>
+        <div class="card mx-2 my-3 p-3 light-beige-colored shadow-sm">
 
-        <div class="mx-2">
-            <h5> Liste des vendeurs | nb: <%= @vendeurs.count %> </h5>
+            <div class="mx-2">
+                <h5 class="fw-bold"> Liste des vendeurs 
+                    <span class="mx-1 badge bg-warning"> <%= @vendeurs.count %> </span>
+                </h5>
 
-            <div class="table-responsive">
-            <table  class="table table-striped table-bordered table-hover">  
-                <thead class="table-dark text-center">
-                <tr>
-                    <th> # </th>
-                    <th> email </th>
-                    <th> changer role </th>
-                </tr>
-                </thead>
-                <tbody>
-                <% @vendeurs.each do |user| %>
+                <div class="table-responsive">
+                <table  class="table table-striped table-bordered table-hover">  
+                    <thead class="table-secondary text-center">
                     <tr>
-                    <td> <%= user.id %>    </td>
-                    <td> <%= user.email %> </td> 
-                    <td> 
-                        <%= link_to "User", toggle_status_user_user_path(user), class:"btn btn-sm btn-secondary", 
-                            :onclick => "return confirm('Etes-vous certain de vouloir passer cet utilisateur en User ?')" %> 
-                        <%= link_to "Admin", toggle_status_admin_user_path(user), class:"btn btn-sm btn-dark", 
-                            :onclick => "return confirm('Etes-vous certain de vouloir passer cet utilisateur en Admin ?')" %> 
-                    </td>
-
+                        <th> # </th>
+                        <th> email </th>
+                        <th> changer role </th>
                     </tr>
-                <% end %>
-                </tbody>
-            </table>
-            </div>
-        </div>
-
-        <hr/>
-
-        <div class="bloc-record">
-            <h5> Liste des admins | nb: <%= @admins.count %></h5>
-
-            <div class="table-responsive">
-            <table  class="table table-striped table-bordered table-hover">  
-                <thead class="table-dark text-center">
-                <tr>
-                    <th> # </th>
-                    <th>email </th>
-                    <th>changer rôle</th>
-                </tr>
-                </thead>
-
-                <tbody>
-                <% @admins.each do |user| %>
-                    <tr>
-                    <td> <%= user.id %>  </td>
-                    <td> <%= user.email %> </td>
-                        <td> 
-                        <%= link_to "User", toggle_status_user_user_path(user), class:"btn btn-sm btn-secondary", 
-                            :onclick => "return confirm('Etes-vous certain de vouloir passer cet Admin en User ?')" %> 
-
-                        <%= link_to "Vendeur", toggle_status_vendeur_user_path(user), class:"btn btn-sm btn-primary", 
-                            :onclick => "return confirm('Etes-vous certain de vouloir passer cet Admin en Vendeur ?')" %> 
+                    </thead>
+                    <tbody>
+                    <% @vendeurs.each do |user| %>
+                        <tr>
+                            <td class="col-1 text-center"> <%= user.id %> </td>
+                            <td class="col-7 "> <%= user.email %> </td>   
+                            <td class="col-5 text-center"> 
+                                <%= link_to "User", toggle_status_user_user_path(user), class:"btn btn-sm btn-secondary", 
+                                    :onclick => "return confirm('Etes-vous certain de vouloir passer cet utilisateur en User ?')" %> 
+                                <%= link_to "Admin", toggle_status_admin_user_path(user), class:"btn btn-sm btn-dark", 
+                                    :onclick => "return confirm('Etes-vous certain de vouloir passer cet utilisateur en Admin ?')" %> 
                         </td>
-                        
-                    </tr>
-                <% end %>
-                </tbody>
-            </table>
+
+                        </tr>
+                    <% end %>
+                    </tbody>
+                </table>
+                </div>
             </div>
         </div>
 
+        <div class="card mx-2 my-3 p-3 light-beige-colored shadow-sm">
+
+            <div class="mx-2">
+                <h5 class="fw-bold"> Liste des admins 
+                    <span class="mx-1 badge bg-warning"> <%= @admins.count %> </span>
+                </h5>
+
+                <div class="table-responsive">
+                <table  class="table table-striped table-bordered table-hover">  
+                    <thead class="table-secondary text-center">
+                    <tr>
+                        <th> # </th>
+                        <th>email </th>
+                        <th>changer rôle</th>
+                    </tr>
+                    </thead>
+
+                    <tbody>
+                    <% @admins.each do |user| %>
+                        <tr>
+                            <td class="col-1 text-center"> <%= user.id %> </td>
+                            <td class="col-7"> <%= user.email %> </td>   
+                            <td class="col-5 text-center"> 
+                                <%= link_to "User", toggle_status_user_user_path(user), class:"btn btn-sm btn-secondary", 
+                                    :onclick => "return confirm('Etes-vous certain de vouloir passer cet Admin en User ?')" %> 
+
+                                <%= link_to "Vendeur", toggle_status_vendeur_user_path(user), class:"btn btn-sm btn-primary", 
+                                    :onclick => "return confirm('Etes-vous certain de vouloir passer cet Admin en Vendeur ?')" %> 
+                            </td>
+                            
+                        </tr>
+                    <% end %>
+                    </tbody>
+                </table>
+                </div>
+            </div>
+        </div>
     <% end %>
 
 <% else %>
