--- a/app/views/produits/_form.html.erb
+++ b/app/views/produits/_form.html.erb
@@ -48,8 +48,14 @@
         <%= custom_form_elements(form, 
           [:description, :text_area], 
           [:handle, :text_field], [:reffrs, :text_field], [:quantite, :number_field],
-          [:fournisseur_id, :text_field], [:dateachat, :date_field]
+          [:dateachat, :date_field]
         ) %>
+
+        <div class="input-group mb-1">
+          <%= form.label :fournisseur_id, class: "input-group-text" %>
+          <%= form.collection_select :fournisseur_id, @fournisseurs.all.order(:nom), :id, :nom, 
+          { include_blank: 'Sélectionner' }, class: "form-select" %>
+        </div>
 
         <div class="input-group input-group mb-1">
           <%= form.label :prixachat, "prix achat HT", class: "input-group-text" %>
