--- a/app/views/paiement_recus/_form.html.erb
+++ b/app/views/paiement_recus/_form.html.erb
@@ -17,13 +17,21 @@
       <div class="input-group input-group">
         <%= form.label :typepaiement, class: "input-group-text" %>
         <%= form.select :typepaiement, PaiementRecu::TYPE_PAIEMENT,
-        { include_blank: 'Select' }, class: "form-select" %>
+        { include_blank: 'Sélectionner' }, class: "form-select" %>
       </div>
     </div>
     
+    <div class="mx-1 px-2">
+      <div class="input-group input-group">
+        <%= form.label :moyen, class: "input-group-text" %>
+        <%= form.select :moyen, PaiementRecu::MOYEN_PAIEMENT,
+        { include_blank: 'Sélectionner' }, class: "form-select" %>
+      </div>
+    </div>
+
     <%= custom_form_elements(form, 
       [:montant, :number_field],
-      [:moyen, :text_field], [:commentaires, :text_area] )
+      [:commentaires, :text_area] )
     %>
 
     <%= form.hidden_field :commande_id, value: commande_id %>
