--- a/app/views/produits/_form.html.erb
+++ b/app/views/produits/_form.html.erb
@@ -47,7 +47,7 @@
 
         <%= custom_form_elements(form, 
           [:description, :text_area], 
-          [:handle, :text_field], [:reffrs, :text_field], [:quantite, :number_field],
+          [:reffrs, :text_field], [:quantite, :number_field],
           [:dateachat, :date_field]
         ) %>
 
