--- a/app/views/produits/_produit.html.erb
+++ b/app/views/produits/_produit.html.erb
@@ -27,6 +27,10 @@
             <p class="m-1 mt-3"><%= badge_disponibilite(produit, Time.now.to_date) %> </p> 
         </div>
           <div class="mt-auto">
+
+           <%= link_to "", dupliquer_produit_path(produitbase: produit), 
+              class: "fa-solid fa-copy btn btn-sm btn-dark" %>
+
             <%= links_record(produit) %>  
           </div>
         </div>
