ajout couleurs et tailles article - et pdf doc

--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -13,8 +13,8 @@
         <h5 class="fw-bold"> <%= article.produit.nom %>  </h5>  
 
        <span class="fw-bold"> <%= article.locvente %> </span>
-
-        taille: <%= article.produit.taille.nom %>  
+        couleur: <%= article.produit&.couleur.nom %>  
+        taille: <%= article.produit&.taille.nom %>  
 
         qté.: <%= article.quantite %>  
         prix: <%= custom_currency_no_decimals_format(article.prix) %>  
